# Todoify

./: .env  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  prestart.sh  pyproject.toml
backend/app/: crud.py  initiat_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 760afa2dd21f_your_message.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: categories.py  login.py  subtask.py  tag.py  tasks.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/services/: categoryServices.py  subtaskServices.py  tagServices.py  taskServices.py
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: api.js  auth.js  categorie.js
frontend/src/compoments/: Hero.jsx  Navbar.jsx  Theme.jsx
frontend/src/components/: AccordionItems.jsx  AddCard.jsx  AddCategoryModal.jsx  BentoElement.jsx  Button.jsx  CategoryItems.jsx  Feature.jsx  HeroSection.jsx  Home.jsx  Login.jsx  Navbar.jsx  PrivateRoute.jsx  Signature.jsx  Signin.jsx  Signup.jsx  Testimonal.jsx  TestimonialSection.jsx  TextDecoration.jsx  WelcomePage.jsx  test
frontend/src/context/: FilterContext.jsx
frontend/src/hooks/: UseOutsideClick.jsx  useAccount.ts  useAuth.ts  useCategory.ts  useChecked.js  useDrawer.js  useDrawer.ts  useFilters.jsx  usePasswordToggler.jsx  useProjectCategories.js  useScreenSize.js  useSubTask.ts  useSubtaskMutation.ts  useTask.ts  useTaskCompleted.js  (+2 more)
(+74 files in other folders)
