[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Stanyslas250 <stanyslas.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
sqlmodel = "^0.0.21"
pydantic-settings = "^2.3.4"
jwt = "^1.3.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
